[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 120
target-version = ['py39']

[tool.isort]
profile = "black"
known_local_folder = ["synth_tools"]
line_length = 120

[tool.mypy]
ignore_missing_imports = true
exclude = "/generated/"

[[tool.mypy.overrides]]
module = "/generated/*"
ignore_errors = true
