[build-system]
requires = ["setuptools", "wheel", "setuptools_scm", "gitpython"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 120
target-version = ['py39']

[tool.isort]
profile = "black"
known_local_folder = ["synth_tools/synth_tools", "synth_tools/kentik_synth_client"]
line_length = 120

[tool.mypy]
ignore_missing_imports = true
exclude = "(generated|build)/"

[[tool.mypy.overrides]]
module = "/generated/*"
ignore_errors = true
